[package]
name = "ostree"
version = "0.9.1"
authors = ["Felix Krull"]

license = "MIT"
description = "Rust bindings for libostree"
keywords = ["ostree", "libostree"]

documentation = "https://fkrull.gitlab.io/ostree-rs/ostree"
repository = "https://gitlab.com/fkrull/ostree-rs"
readme = "README.md"

exclude = [
    "conf/**",
    "gir-files/**",
    "sys/**",
    ".gitlab-ci.yml",
    "LICENSE.LGPL*",
]

[package.metadata.docs.rs]
features = ["dox"]

[badges.gitlab]
repository = "fkrull/ostree-rs"

[lib]
name = "ostree"

[workspace]
members = [".", "sys"]

[dependencies]
libc = "0.2"
bitflags = "1.2.1"
glib = "0.10.1"
gio = "0.9.0"
glib-sys = "0.10.0"
gobject-sys = "0.10.0"
gio-sys = "0.10.0"
once_cell = "1.4.0"
ostree-sys = { version = "0.7.1", path = "sys" }
radix64 = "0.6.2"
hex = "0.4.2"
thiserror = "1.0.20"

[dev-dependencies]
maplit = "1.0.2"
openat = "0.1.19"
tempfile = "3"

[features]
dox = ["ostree-sys/dox"]
v2014_9 = ["ostree-sys/v2014_9"]
v2015_7 = ["v2014_9", "ostree-sys/v2015_7"]
v2016_3 = ["v2015_7", "ostree-sys/v2016_3"]
v2016_4 = ["v2015_7", "ostree-sys/v2016_4"]
v2016_5 = ["v2016_4", "ostree-sys/v2016_5"]
v2016_6 = ["v2016_5", "ostree-sys/v2016_6"]
v2016_7 = ["v2016_6", "ostree-sys/v2016_7"]
v2016_8 = ["v2016_7", "ostree-sys/v2016_8"]
v2016_14 = ["v2016_8", "ostree-sys/v2016_14"]
v2017_1 = ["v2016_14", "ostree-sys/v2017_1"]
v2017_2 = ["v2017_1", "ostree-sys/v2017_2"]
v2017_3 = ["v2017_2", "ostree-sys/v2017_3"]
v2017_4 = ["v2017_3", "ostree-sys/v2017_4"]
v2017_6 = ["v2017_4", "ostree-sys/v2017_6"]
v2017_7 = ["v2017_6", "ostree-sys/v2017_7"]
v2017_8 = ["v2017_7", "ostree-sys/v2017_8"]
v2017_9 = ["v2017_8", "ostree-sys/v2017_9"]
v2017_10 = ["v2017_9", "ostree-sys/v2017_10"]
v2017_11 = ["v2017_10", "ostree-sys/v2017_11"]
v2017_12 = ["v2017_11", "ostree-sys/v2017_12"]
v2017_13 = ["v2017_12", "ostree-sys/v2017_13"]
v2017_15 = ["v2017_13", "ostree-sys/v2017_15"]
v2018_2 = ["v2017_15", "ostree-sys/v2018_2"]
v2018_3 = ["v2018_2", "ostree-sys/v2018_3"]
v2018_5 = ["v2018_3", "ostree-sys/v2018_5"]
v2018_6 = ["v2018_5", "ostree-sys/v2018_6"]
v2018_7 = ["v2018_6", "ostree-sys/v2018_7"]
v2018_9 = ["v2018_7", "ostree-sys/v2018_9"]
v2019_2 = ["v2018_9", "ostree-sys/v2019_2"]
v2019_3 = ["v2019_2", "ostree-sys/v2019_3"]
v2019_4 = ["v2019_3", "ostree-sys/v2019_4"]
v2019_6 = ["v2019_4", "ostree-sys/v2019_6"]
v2020_1 = ["v2019_6", "ostree-sys/v2020_1"]
v2020_2 = ["v2020_1", "ostree-sys/v2020_2"]
v2020_4 = ["v2020_2", "ostree-sys/v2020_4"]
v2020_7 = ["v2020_4", "ostree-sys/v2020_7"]
