[build-dependencies]
system-deps = "7"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
version = "0.20"

[dependencies.glib-sys]
version = "0.20"

[dependencies.gobject-sys]
version = "0.20"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2014_9 = []
v2015_7 = ["v2014_9"]
v2016_3 = ["v2015_7"]
v2016_4 = ["v2016_3"]
v2016_5 = ["v2016_4"]
v2016_6 = ["v2016_5"]
v2016_7 = ["v2016_6"]
v2016_8 = ["v2016_7"]
v2016_14 = ["v2016_8"]
v2017_1 = ["v2016_14"]
v2017_2 = ["v2017_1"]
v2017_3 = ["v2017_2"]
v2017_4 = ["v2017_3"]
v2017_6 = ["v2017_4"]
v2017_7 = ["v2017_6"]
v2017_8 = ["v2017_7"]
v2017_9 = ["v2017_8"]
v2017_10 = ["v2017_9"]
v2017_11 = ["v2017_10"]
v2017_12 = ["v2017_11"]
v2017_13 = ["v2017_12"]
v2017_15 = ["v2017_13"]
v2018_2 = ["v2017_15"]
v2018_3 = ["v2018_2"]
v2018_5 = ["v2018_3"]
v2018_6 = ["v2018_5"]
v2018_7 = ["v2018_6"]
v2018_9 = ["v2018_7"]
v2019_2 = ["v2018_9"]
v2019_3 = ["v2019_2"]
v2019_4 = ["v2019_3"]
v2019_6 = ["v2019_4"]
v2020_1 = ["v2019_6"]
v2020_2 = ["v2020_1"]
v2020_4 = ["v2020_2"]
dox = []
v2020_7 = ["v2020_4"]
v2020_8 = ["v2020_7"]
v2021_1 = ["v2020_8"]
v2021_2 = ["v2021_1"]
v2021_3 = ["v2021_2"]
v2021_4 = ["v2021_3"]
v2021_5 = ["v2021_4"]
v2022_2 = ["v2021_5"]
v2022_5 = ["v2022_2"]
v2022_6 = ["v2022_5"]
v2022_7 = ["v2022_5"]
v2023_1 = ["v2022_7"]
v2023_8 = ["v2023_1"]
v2023_11 = ["v2023_8"]
v2025_1 = ["v2024_7"]
v2024_7 = ["v2023_11"]
v2025_2 = ["v2025_1"]
v2025_3 = ["v2025_2"]

[lib]
name = "ostree_sys"

[package]
authors = ["Felix Krull"]
build = "build.rs"
categories = ["external-ffi-bindings"]
description = "FFI bindings to libostree-1"
documentation = "https://docs.rs/ostree-sys"
keywords = ["ffi", "ostree", "libostree"]
license = "MIT"
links = "ostree-1"
name = "ostree-sys"
repository = "https://github.com/ostreedev/ostree-rs"
version = "0.15.3"
edition = "2021"

[package.metadata.docs.rs]
features = ["dox"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.system-deps.ostree_1]
name = "ostree-1"
version = "0.0"

[package.metadata.system-deps.ostree_1.v2014_9]
version = "2014.9"

[package.metadata.system-deps.ostree_1.v2015_7]
version = "2015.7"

[package.metadata.system-deps.ostree_1.v2016_3]
version = "2016.3"

[package.metadata.system-deps.ostree_1.v2016_4]
version = "2016.4"

[package.metadata.system-deps.ostree_1.v2016_5]
version = "2016.5"

[package.metadata.system-deps.ostree_1.v2016_6]
version = "2016.6"

[package.metadata.system-deps.ostree_1.v2016_7]
version = "2016.7"

[package.metadata.system-deps.ostree_1.v2016_8]
version = "2016.8"

[package.metadata.system-deps.ostree_1.v2016_14]
version = "2016.14"

[package.metadata.system-deps.ostree_1.v2017_1]
version = "2017.1"

[package.metadata.system-deps.ostree_1.v2017_2]
version = "2017.2"

[package.metadata.system-deps.ostree_1.v2017_3]
version = "2017.3"

[package.metadata.system-deps.ostree_1.v2017_4]
version = "2017.4"

[package.metadata.system-deps.ostree_1.v2017_6]
version = "2017.6"

[package.metadata.system-deps.ostree_1.v2017_7]
version = "2017.7"

[package.metadata.system-deps.ostree_1.v2017_8]
version = "2017.8"

[package.metadata.system-deps.ostree_1.v2017_9]
version = "2017.9"

[package.metadata.system-deps.ostree_1.v2017_10]
version = "2017.10"

[package.metadata.system-deps.ostree_1.v2017_11]
version = "2017.11"

[package.metadata.system-deps.ostree_1.v2017_12]
version = "2017.12"

[package.metadata.system-deps.ostree_1.v2017_13]
version = "2017.13"

[package.metadata.system-deps.ostree_1.v2017_15]
version = "2017.15"

[package.metadata.system-deps.ostree_1.v2018_2]
version = "2018.2"

[package.metadata.system-deps.ostree_1.v2018_3]
version = "2018.3"

[package.metadata.system-deps.ostree_1.v2018_5]
version = "2018.5"

[package.metadata.system-deps.ostree_1.v2018_6]
version = "2018.6"

[package.metadata.system-deps.ostree_1.v2018_7]
version = "2018.7"

[package.metadata.system-deps.ostree_1.v2018_9]
version = "2018.9"

[package.metadata.system-deps.ostree_1.v2019_2]
version = "2019.2"

[package.metadata.system-deps.ostree_1.v2019_3]
version = "2019.3"

[package.metadata.system-deps.ostree_1.v2019_4]
version = "2019.4"

[package.metadata.system-deps.ostree_1.v2019_6]
version = "2019.6"

[package.metadata.system-deps.ostree_1.v2020_1]
version = "2020.1"

[package.metadata.system-deps.ostree_1.v2020_2]
version = "2020.2"

[package.metadata.system-deps.ostree_1.v2020_4]
version = "2020.4"

[package.metadata.system-deps.ostree_1.v2020_7]
version = "2020.7"

[package.metadata.system-deps.ostree_1.v2020_8]
version = "2020.8"

[package.metadata.system-deps.ostree_1.v2021_1]
version = "2021.1"

[package.metadata.system-deps.ostree_1.v2021_2]
version = "2021.2"

[package.metadata.system-deps.ostree_1.v2021_3]
version = "2021.3"

[package.metadata.system-deps.ostree_1.v2021_4]
version = "2021.4"

[package.metadata.system-deps.ostree_1.v2021_5]
version = "2021.5"

[package.metadata.system-deps.ostree_1.v2022_2]
version = "2022.2"

[package.metadata.system-deps.ostree_1.v2022_5]
version = "2022.5"

[package.metadata.system-deps.ostree_1.v2022_6]
version = "2022.6"

[package.metadata.system-deps.ostree_1.v2022_7]
version = "2022.7"

[package.metadata.system-deps.ostree_1.v2023_1]
version = "2023.1"

[package.metadata.system-deps.ostree_1.v2023_8]
version = "2023.8"

[package.metadata.system-deps.ostree_1.v2023_11]
version = "2023.11"

[package.metadata.system-deps.ostree_1.v2025_1]
version = "2025.1"

[package.metadata.system-deps.ostree_1.v2024_7]
version = "2024.7"

[package.metadata.system-deps.ostree_1.v2025_2]
version = "2025.2"

[package.metadata.system-deps.ostree_1.v2025_3]
version = "2025.3"
