[package]
name = "ostree-test"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"

[[bin]]
name = "ostree-test"
path = "src/insttestmain.rs"

[dependencies]
clap = "2.32.0"
structopt = "0.3"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0"
serde_yaml = "0.8.14"
sh-inline = "0.1.0"
anyhow = "1.0"
tempfile = "3.1.0"
glib = "0.10"
gio = "0.9"
ostree = { version = "0.8.0", features = ["v2020_1"] }
libtest-mimic = "0.3.0"
twoway = "0.2.1"
hyper = "0.13"
futures = "0.3.4"
http = "0.2.0"
hyper-staticfile = "0.5.1"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3.1"
base64 = "0.12.0"
procspawn = "0.8"
rand = "0.7.3"
linkme = "0.2"
strum = "0.18.0"
strum_macros = "0.18.0"
openat = "0.1.19"
openat-ext = "0.1.4"
nix = "0.17.0"

# This one I might publish to crates.io, not sure yet
with-procspawn-tempdir = { git = "https://github.com/cgwalters/with-procspawn-tempdir" }

# Internal crate for the test macro
itest-macro = { path = "itest-macro" }
