[package]
name = "ostree-test"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2021"

[workspace]

[[bin]]
name = "ostree-test"
path = "src/insttestmain.rs"

[dependencies]
cap-std-ext = "1.0"
clap = "2.32.0"
structopt = "0.3"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0"
sh-inline = "0.4.0"
anyhow = "1.0"
tempfile = "3.1.0"
ostree-ext = { version = "0.11" }
libtest-mimic = "0.5.0"
twoway = "0.2.1"
hyper = { version = "0.14", features = ["runtime", "http1", "http2", "tcp", "server"] }
hyper-staticfile = "0.9.4"
futures = "0.3.4"
http = "0.2.0"
tokio = { version = "1.4.0", features = ["full"] }
futures-util = "0.3.1"
libc = "0.2.100"
base64 = "0.12.0"
procspawn = "0.8"
rand = "0.8"
strum = "0.18.0"
strum_macros = "0.18.0"
# See discussion in https://github.com/coreos/rpm-ostree/pull/2569#issuecomment-780569188
rpmostree-client = { git = "https://github.com/coreos/rpm-ostree", tag = "v2021.3" }
xshell = "0.2.3"

# This one I might publish to crates.io, not sure yet
with-procspawn-tempdir = { git = "https://github.com/cgwalters/with-procspawn-tempdir" }
