[package]
name = "ostree-xtask"
version = "0.1.0"
edition = "2021"
publish = false

# Separate workspace from root; this is a dev-only tool
[workspace]

[[bin]]
name = "ostree-xtask"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
xshell = "0.2"
