[badges.gitlab]
repository = "fkrull/rust-libostree"

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
gio-sys = "0.7"
glib-sys = "0.7"
gobject-sys = "0.7"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v2014_9 = []
v2015_7 = ["v2014_9"]
v2017_10 = ["v2017_9"]
v2017_11 = ["v2017_10"]
v2017_12 = ["v2017_11"]
v2017_13 = ["v2017_12"]
v2017_15 = ["v2017_13"]
v2017_3 = ["v2015_7"]
v2017_4 = ["v2017_3"]
v2017_6 = ["v2017_4"]
v2017_7 = ["v2017_6"]
v2017_8 = ["v2017_7"]
v2017_9 = ["v2017_8"]
v2018_2 = ["v2017_15"]
v2018_3 = ["v2018_2"]
v2018_5 = ["v2018_3"]
v2018_6 = ["v2018_5"]
v2018_7 = ["v2018_6"]

[lib]
name = "libostree_sys"

[package]
authors = ["Felix Krull <f_krull@gmx.de>"]
build = "build.rs"
categories = ["external-ffi-bindings"]
description = "FFI bindings to libostree-1"
keywords = ["ffi", "ostree", "libostree"]
license = "MIT"
links = "ostree"
name = "libostree-sys"
repository = "https://gitlab.com/fkrull/rust-libostree"
version = "0.1.1"
