[package]
name = "libostree"
version = "0.1.0"

documentation = "https://fkrull.gitlab.io/rust-libostree/libostree"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "libostree"

[dependencies]
libc = "0.2"
bitflags = "1"
lazy_static = "1.1"
glib = "0.6"
gio = "0.5"
glib-sys = "0.7"
gobject-sys = "0.7"
gio-sys = "0.7"
libostree-sys = { version = "0.1", path = "../libostree-sys" }

[dev-dependencies]
tempfile = "3"
