[package]
name = "libostree"
version = "0.1.0"
authors = ["Felix Krull"]
build = "build.rs"

license = "MIT"
description = "Rust bindings for libostree"
keywords = ["ostree", "libostree"]

documentation = "https://fkrull.gitlab.io/rust-libostree/libostree"
repository = "https://gitlab.com/fkrull/rust-libostree"
readme = "README.md"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "libostree"

[dependencies]
libc = "0.2"
bitflags = "1"
lazy_static = "1.1"
glib = "0.6"
gio = "0.5"
glib-sys = "0.7"
gobject-sys = "0.7"
gio-sys = "0.7"
libostree-sys = { version = "0.1", path = "../libostree-sys" }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
gir = { git = "https://github.com/gtk-rs/gir", optional = true }
rustdoc-stripper = { version = "0.1", optional = true }

[features]
dox = ["libostree-sys/dox"]
lgpl-docs = ["gir", "rustdoc-stripper"]
