[badges.gitlab]
repository = "fkrull/ostree-rs"

[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
gio-sys = "0.9.0"
glib-sys = "0.9.0"
gobject-sys = "0.9.0"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
v2014_9 = []
v2015_7 = ["v2014_9"]
v2016_4 = ["v2015_7"]
v2016_5 = ["v2016_4"]
v2016_6 = ["v2016_5"]
v2016_7 = ["v2016_6"]
v2016_8 = ["v2016_7"]
v2016_14 = ["v2016_8"]
v2017_1 = ["v2016_14"]
v2017_2 = ["v2017_1"]
v2017_3 = ["v2017_2"]
v2017_4 = ["v2017_3"]
v2017_6 = ["v2017_4"]
v2017_7 = ["v2017_6"]
v2017_8 = ["v2017_7"]
v2017_9 = ["v2017_8"]
v2017_10 = ["v2017_9"]
v2017_11 = ["v2017_10"]
v2017_12 = ["v2017_11"]
v2017_13 = ["v2017_12"]
v2017_15 = ["v2017_13"]
v2018_2 = ["v2017_15"]
v2018_3 = ["v2018_2"]
v2018_5 = ["v2018_3"]
v2018_6 = ["v2018_5"]
v2018_7 = ["v2018_6"]
v2018_9 = ["v2018_7"]
v2019_2 = ["v2018_9"]
v2019_3 = ["v2019_2"]
dox = []

[lib]
name = "ostree_sys"

[package]
authors = ["Felix Krull"]
build = "build.rs"
categories = ["external-ffi-bindings"]
description = "FFI bindings to libostree-1"
documentation = "https://fkrull.gitlab.io/ostree-rs/ostree_sys"
keywords = ["ffi", "ostree", "libostree"]
license = "MIT"
links = "ostree-1"
name = "ostree-sys"
repository = "https://gitlab.com/fkrull/ostree-rs"
version = "0.4.0"

["package.metadata.docs.rs"]
features = ["dox", "v2019_3"]
