[badges.gitlab]
repository = "fkrull/ostree-rs"

[build-dependencies]
pkg-config = "0.3.7"
system-deps = "1.3"

[dependencies]
gio-sys = "0.9.1"
glib-sys = "0.9.1"
gobject-sys = "0.9.1"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v2014_9 = []
v2015_7 = ["v2014_9"]
v2016_4 = ["v2015_7"]
v2016_5 = ["v2016_4"]
v2016_6 = ["v2016_5"]
v2016_7 = ["v2016_6"]
v2016_8 = ["v2016_7"]
v2016_14 = ["v2016_8"]
v2017_1 = ["v2016_14"]
v2017_2 = ["v2017_1"]
v2017_3 = ["v2017_2"]
v2017_4 = ["v2017_3"]
v2017_6 = ["v2017_4"]
v2017_7 = ["v2017_6"]
v2017_8 = ["v2017_7"]
v2017_9 = ["v2017_8"]
v2017_10 = ["v2017_9"]
v2017_11 = ["v2017_10"]
v2017_12 = ["v2017_11"]
v2017_13 = ["v2017_12"]
v2017_15 = ["v2017_13"]
v2018_2 = ["v2017_15"]
v2018_3 = ["v2018_2"]
v2018_5 = ["v2018_3"]
v2018_6 = ["v2018_5"]
v2018_7 = ["v2018_6"]
v2018_9 = ["v2018_7"]
v2019_2 = ["v2018_9"]
v2019_3 = ["v2019_2"]
v2019_4 = ["v2019_3"]
v2019_6 = ["v2019_4"]
v2020_1 = ["v2019_6"]
dox = []

[lib]
name = "ostree_sys"

[package]
authors = ["Felix Krull"]
build = "build.rs"
categories = ["external-ffi-bindings"]
description = "FFI bindings to libostree-1"
documentation = "https://fkrull.gitlab.io/ostree-rs/ostree_sys"
keywords = ["ffi", "ostree", "libostree"]
license = "MIT"
links = "ostree-1"
name = "ostree-sys"
repository = "https://gitlab.com/fkrull/ostree-rs"
version = "0.5.4"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.ostree_1]
name = "ostree-1"
version = "0.0"

[package.metadata.system-deps.ostree_1.feature-versions]
v2014_9 = "2014.9"
v2015_7 = "2015.7"
v2016_4 = "2016.4"
v2016_5 = "2016.5"
v2016_6 = "2016.6"
v2016_7 = "2016.7"
v2016_8 = "2016.8"
v2016_14 = "2016.14"
v2017_1 = "2017.1"
v2017_2 = "2017.2"
v2017_3 = "2017.3"
v2017_4 = "2017.4"
v2017_6 = "2017.6"
v2017_7 = "2017.7"
v2017_8 = "2017.8"
v2017_9 = "2017.9"
v2017_10 = "2017.10"
v2017_11 = "2017.11"
v2017_12 = "2017.12"
v2017_13 = "2017.13"
v2017_15 = "2017.15"
v2018_2 = "2018.2"
v2018_3 = "2018.3"
v2018_5 = "2018.5"
v2018_6 = "2018.6"
v2018_7 = "2018.7"
v2018_9 = "2018.9"
v2019_2 = "2019.2"
v2019_3 = "2019.3"
v2019_4 = "2019.4"
v2019_6 = "2019.6"
v2020_1 = "2020.1"
