[badges.gitlab]
repository = "fkrull/ostree-rs"

[build-dependencies]
system-deps = "3"

[dependencies]
glib-sys = "0.14.0"
gobject-sys = "0.14.0"
gio-sys = "0.14.0"
libc = "0.2"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2014_9 = []
v2015_7 = ["v2014_9"]
v2016_3 = ["v2015_7"]
v2016_4 = ["v2016_3"]
v2016_5 = ["v2016_4"]
v2016_6 = ["v2016_5"]
v2016_7 = ["v2016_6"]
v2016_8 = ["v2016_7"]
v2016_14 = ["v2016_8"]
v2017_1 = ["v2016_14"]
v2017_2 = ["v2017_1"]
v2017_3 = ["v2017_2"]
v2017_4 = ["v2017_3"]
v2017_6 = ["v2017_4"]
v2017_7 = ["v2017_6"]
v2017_8 = ["v2017_7"]
v2017_9 = ["v2017_8"]
v2017_10 = ["v2017_9"]
v2017_11 = ["v2017_10"]
v2017_12 = ["v2017_11"]
v2017_13 = ["v2017_12"]
v2017_15 = ["v2017_13"]
v2018_2 = ["v2017_15"]
v2018_3 = ["v2018_2"]
v2018_5 = ["v2018_3"]
v2018_6 = ["v2018_5"]
v2018_7 = ["v2018_6"]
v2018_9 = ["v2018_7"]
v2019_2 = ["v2018_9"]
v2019_3 = ["v2019_2"]
v2019_4 = ["v2019_3"]
v2019_6 = ["v2019_4"]
v2020_1 = ["v2019_6"]
v2020_2 = ["v2020_1"]
v2020_4 = ["v2020_2"]
dox = []
v2020_7 = ["v2020_4"]
v2020_8 = ["v2020_7"]
v2021_1 = ["v2020_8"]
v2021_2 = ["v2021_1"]
v2021_3 = ["v2021_2"]

[lib]
name = "ostree_sys"

[package]
authors = ["Felix Krull"]
build = "build.rs"
categories = ["external-ffi-bindings"]
description = "FFI bindings to libostree-1"
documentation = "https://fkrull.gitlab.io/ostree-rs/ostree_sys"
keywords = ["ffi", "ostree", "libostree"]
license = "MIT"
links = "ostree-1"
name = "ostree-sys"
repository = "https://gitlab.com/fkrull/ostree-rs"
version = "0.8.1"
edition = "2018"

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps.ostree_1]
name = "ostree-1"
version = "0.0"

[package.metadata.system-deps.ostree_1.v2014_9]
version = "2014.9"

[package.metadata.system-deps.ostree_1.v2015_7]
version = "2015.7"

[package.metadata.system-deps.ostree_1.v2016_3]
version = "2016.3"

[package.metadata.system-deps.ostree_1.v2016_4]
version = "2016.4"

[package.metadata.system-deps.ostree_1.v2016_5]
version = "2016.5"

[package.metadata.system-deps.ostree_1.v2016_6]
version = "2016.6"

[package.metadata.system-deps.ostree_1.v2016_7]
version = "2016.7"

[package.metadata.system-deps.ostree_1.v2016_8]
version = "2016.8"

[package.metadata.system-deps.ostree_1.v2016_14]
version = "2016.14"

[package.metadata.system-deps.ostree_1.v2017_1]
version = "2017.1"

[package.metadata.system-deps.ostree_1.v2017_2]
version = "2017.2"

[package.metadata.system-deps.ostree_1.v2017_3]
version = "2017.3"

[package.metadata.system-deps.ostree_1.v2017_4]
version = "2017.4"

[package.metadata.system-deps.ostree_1.v2017_6]
version = "2017.6"

[package.metadata.system-deps.ostree_1.v2017_7]
version = "2017.7"

[package.metadata.system-deps.ostree_1.v2017_8]
version = "2017.8"

[package.metadata.system-deps.ostree_1.v2017_9]
version = "2017.9"

[package.metadata.system-deps.ostree_1.v2017_10]
version = "2017.10"

[package.metadata.system-deps.ostree_1.v2017_11]
version = "2017.11"

[package.metadata.system-deps.ostree_1.v2017_12]
version = "2017.12"

[package.metadata.system-deps.ostree_1.v2017_13]
version = "2017.13"

[package.metadata.system-deps.ostree_1.v2017_15]
version = "2017.15"

[package.metadata.system-deps.ostree_1.v2018_2]
version = "2018.2"

[package.metadata.system-deps.ostree_1.v2018_3]
version = "2018.3"

[package.metadata.system-deps.ostree_1.v2018_5]
version = "2018.5"

[package.metadata.system-deps.ostree_1.v2018_6]
version = "2018.6"

[package.metadata.system-deps.ostree_1.v2018_7]
version = "2018.7"

[package.metadata.system-deps.ostree_1.v2018_9]
version = "2018.9"

[package.metadata.system-deps.ostree_1.v2019_2]
version = "2019.2"

[package.metadata.system-deps.ostree_1.v2019_3]
version = "2019.3"

[package.metadata.system-deps.ostree_1.v2019_4]
version = "2019.4"

[package.metadata.system-deps.ostree_1.v2019_6]
version = "2019.6"

[package.metadata.system-deps.ostree_1.v2020_1]
version = "2020.1"

[package.metadata.system-deps.ostree_1.v2020_2]
version = "2020.2"

[package.metadata.system-deps.ostree_1.v2020_4]
version = "2020.4"

[package.metadata.system-deps.ostree_1.v2020_7]
version = "2020.7"

[package.metadata.system-deps.ostree_1.v2020_8]
version = "2020.8"

[package.metadata.system-deps.ostree_1.v2021_1]
version = "2021.1"

[package.metadata.system-deps.ostree_1.v2021_2]
version = "2021.2"

[package.metadata.system-deps.ostree_1.v2021_3]
version = "2021.3"
